tests/fixtures/errors/at_in_const.ksr
// Graph reference in const expression: @x not allowed
param x = 1.0;
const BAD = @x + 1.0;
